Update 3. Advanced School Grading System using Loops.ipynb

--- a/3. Advanced School Grading System using Loops.ipynb
+++ b/3. Advanced School Grading System using Loops.ipynb
@@ -147,12 +147,11 @@
     "print(tabulate(my_student_list, headers=headers, tablefmt=('grid')))\n"
    ]
   },
-  {
-   "cell_type": "markdown",
+  "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Help Required:\n",
-    "I would like to make this code accessible for teachers with visual imparments. Please assist with voice prompted inputs and outputs on file 4. School Grading System for Educators with Visual Impairments"
+    "I would like to make this code accessible to teachers with visual impairments.
    ]
   }
  ],
@@ -163,7 +162,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
+   "codemir {
+  ror_mode": {
     "name": "ipython",
     "version": 3
    },
